# webSearch-Tools

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
tools/: webtools.py
